--- a/public/css/app.css
+++ b/public/css/app.css
@@ -745,6 +745,10 @@ select {
   margin-top: -0.375rem;
   margin-bottom: -0.375rem;
 }
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+}
 .mt-10 {
   margin-top: 2.5rem;
 }
@@ -765,6 +769,9 @@ select {
 }
 .mt-3 {
   margin-top: 0.75rem;
+}
+.mb-0 {
+  margin-bottom: 0px;
 }
 .block {
   display: block;
