--- a/views/layouts/app.pug
+++ b/views/layouts/app.pug
@@ -24,11 +24,12 @@ html
                                     path(stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 005.454-1.31A8.967 8.967 0 0118 9.75v-.7V9A6 6 0 006 9v.75a8.967 8.967 0 01-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 01-5.714 0m5.714 0a3 3 0 11-5.714 0")
                             // Profile dropdown
                             div(class="relative ml-3")
-                                div
-                                    button#user-menu-button(type="button" class="relative flex max-w-xs items-center rounded-full bg-white text-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2" aria-expanded="false" aria-haspopup="true")
-                                        span(class="absolute -inset-1.5")
-                                        span(class="sr-only") Open user menu
-                                        img(class="h-8 w-8 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="Avatar")
+                                div.flex.items-center
+                                    p Bienvenido, #{username}
+                                    span.mx-3 |
+                                    form.mb-0(action="/logout" method="post")
+                                        input(type="hidden" name="_csrf" value=csrfToken)
+                                        button(type="submit" class="text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2") Cerrar sesión
 
                             div(class="-mr-2 flex items-center sm:hidden")
                                 // Mobile menu button
@@ -59,10 +60,7 @@ html
                                 span(class="sr-only") View notifications
                                 svg(class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true")
                                     path(stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 005.454-1.31A8.967 8.967 0 0118 9.75v-.7V9A6 6 0 006 9v.75a8.967 8.967 0 01-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 01-5.714 0m5.714 0a3 3 0 11-5.714 0")
-                                        div(class="mt-3 space-y-1")
-                                            a(href="#" class="block px-4 py-2 text-base font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-800") Your Profile
-                                            a(href="#" class="block px-4 py-2 text-base font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-800") Settings
-                                            a(href="#" class="block px-4 py-2 text-base font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-800") Sign out
+
             div(class="py-10")
                 header
                     div(class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8")
