--- a/views/app/dashboard.pug
+++ b/views/app/dashboard.pug
@@ -1,4 +1,35 @@
 extends ../layouts/app
+include ../mixins/alerts
 
 block content
-    h1 Dashboard hi hi
+    div(class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8")
+
+        div(class="mt-4 sm:mx-auto sm:w-full sm:max-w-xl")
+            if success
+                +alert(success, true, false)
+
+        if errors
+            +errors(errors)
+
+        div(class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm")
+            form(class="space-y-6" action="/dashboard/update-user" method="POST" novalidate)
+                input(type="hidden" name="_csrf" value=csrfToken)
+                div
+                    label(for="name" class="block text-sm font-medium leading-6 text-gray-900") Nombre
+                    div(class="mt-2")
+                        input#name(name="name" type="text" autocomplete="name" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" value= user ? user.name : '')
+                div
+                    label(for="surname" class="block text-sm font-medium leading-6 text-gray-900") Apellido
+                    div(class="mt-2")
+                        input#surname(name="surname" type="text" autocomplete="surname" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" value= user ? user.surname : '')
+                div
+                    label(for="username" class="block text-sm font-medium leading-6 text-gray-900") Usuario
+                    div(class="mt-2")
+                        input#username(name="username" type="text" autocomplete="username" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" value= user ? user.username : '')
+                div
+                    label(for="email" class="block text-sm font-medium leading-6 text-gray-900") Email
+                    div(class="mt-2")
+                        input#email(name="email" type="email" autocomplete="email" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" value= user ? user.email : '' aria-readonly readonly)
+
+                div
+                    button(type="submit" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600") Actualizar
